# Grand-Challenge-2-TeamArctic

./: CMakeLists.txt  README.md
input/: sleep_values.txt
logs/: log_2022-12-05.txt
src/: manager.cpp  temp.cpp  worker.cpp
src/utility/: ConcurrentDequeue.h  ConcurrentMap.h
utility/: Logger.h
